Removed css lines which cause availability bug on tablet/mobile layouts

--- a/web/interface/themes/ndl/css/720tablet.css
+++ b/web/interface/themes/ndl/css/720tablet.css
@@ -287,12 +287,6 @@
     table.holdingsContainerHolding .available {
         display: inline-block;
     }
-	.resultItemLine3 .availableTotals {
-    	display:block !important;
-		font-weight:500;
-		clear:both;
-    	margin-left: -2px;
-	}
 	
     #recordProvidedBy .dropdown dt a {
         width: 100px;        
